# dir-summary

./: .gitignore  Cargo.toml  README.md  pyproject.toml  pythontest.py
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/modules/: dir_stat.rs
