[package]
name = "dir-summary"
version = "0.1.0"
edition = "2024"

[lib]
name = "dirSummary"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "dir-summary"
path = "src/main.rs"




[dependencies]
anyhow = "1.0.101"
bytesize = "2.3.1"
clap = {version ="4.5.57",features = ["derive"]}
csv = "1.4.0"
uuid = {version = "1.20.0",features = ["v4"]}
walkdir = "2.5.0"

